# chocolate-node

./: .dockerignore  .gitpod.yml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  types.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: report-a-bug.md  suggest-a-feature.md
.github/dockerfiles/: Dockerfile.gitpod-base  Dockerfile.ubuntu-base  docker-compose.yml.template
docs/: rust-setup.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/chocolate/: Cargo.toml
pallets/chocolate/src/: benchmarking.rs  constants.rs  lib.rs  mock.rs  tests.rs
pallets/token/: Cargo.toml
pallets/token/src/: lib.rs
pallets/users/: Cargo.toml
pallets/users/src/: lib.rs
primitives/chocolate-node-constants/: Cargo.toml
primitives/chocolate-node-constants/src/: currency.rs  lib.rs  tests.rs  time.rs
primitives/chocolate-projects/: Cargo.toml
primitives/chocolate-projects/src/: lib.rs
primitives/chocolate-users/: Cargo.toml
primitives/chocolate-users/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: cloud_run.sh  docker_run.sh  gcloud_init.sh  gitpod_init.sh
