[package]
authors = ['Team Chocolate']
description = 'Substrate FRAME users pallet for defining custom runtime logic.'
edition = '2021'
homepage = ''
license = 'Unlicense'
name = 'pallet-users'
publish = false
repository = 'https://github.com/Chocolate-Project/chocolate-node'
version = '0.1.0'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies.serde]
version = '1.0.126'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.17'
version = '5.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.17'
version = '5.0.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.17'
version = '5.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.17'
version = '4.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'polkadot-v0.9.17'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.17'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.17'
version = '4.0.0-dev'

# added dep
[dependencies.chocolate-users]
path = '../../primitives/chocolate-users'
default-features = false
version = '0.1.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
     # added
    'chocolate-users/std',
]
try-runtime = ['frame-support/try-runtime']